--- a/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
@@ -20,7 +20,7 @@
 
                 <a class="cr-actions-register-link"
                    ng-bind-html="'nav.to-identification' | translate"
-                   ng-click="openModal('household/account/registration')">
+                   ng-click="openModal('household/account/registration','RegistrationCtrl')">
                 </a>
             </div>
 
@@ -81,9 +81,6 @@
             </div>
 
         </div>
-
-        <!-- TEMP -->
-        <button ng-click="save()">Save</button>
 
     </div>
 </div>
