cr-tooltip-on-respond

--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -6,6 +6,7 @@
 @import "_cr-modal";
 @import "_cr-profile";
 @import "_cr-actions";
+@import "_cr-messenger";
 
 img, button {
     max-width: 100%;
