--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-presence.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-presence.html
@@ -6,7 +6,7 @@
 <div class="modal-body">
 
     <cr-question label="Q1300.label">
-        <cr-slider ng-model="getAnswerValue('Q1300').doubleValue" min="0" max="20" step="1"></cr-slider>
+        <cr-slider cr-tootip-on-respond="Hello" ng-model="getAnswerValue('Q1300').doubleValue" min="0" max="20" step="1"></cr-slider>
     </cr-question>
 
     <cr-question label="Q1400.label">
