--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -24,6 +24,9 @@
         <script src='@routes.Assets.at("components/angular-bootstrap/ui-bootstrap-tpls.js")'></script>
         <script src='@routes.Assets.at("components/angular-rangeslider/angular.rangeSlider.js")'></script>
         <script src='@routes.Assets.at("components/angular-gettext/dist/angular-gettext.js")'></script>
+        @* Messenger *@
+        <script src='@routes.Assets.at("components/messenger/build/js/messenger.min.js")'></script>
+
         @* web app *@
         <script src='@routes.Assets.at("javascripts/app.js")'></script>
         @* ------------------------------------------------------------------ *@
@@ -32,6 +35,7 @@
         <link rel="stylesheet" media="screen" href='@routes.Assets.at("components/font-awesome/css/font-awesome.min.css")'/>
         <link rel="stylesheet" media="screen" href='@routes.Assets.at("components/bootstrap/dist/css/bootstrap.min.css")'/>
         <link rel="stylesheet" media="screen" href='@routes.Assets.at("components/angular-rangeslider/angular.rangeSlider.css")'/>
+        <link rel="stylesheet" media="screen" href='@routes.Assets.at("components/messenger/build/css/messenger.css")'/>
         <link rel="stylesheet" media="screen" href='@routes.Assets.at("style.css")'/>
 
     </head>
