--- a/app/eu/factorx/citizens/angular/views/test/controls-demo.html
+++ b/app/eu/factorx/citizens/angular/views/test/controls-demo.html
@@ -35,6 +35,11 @@
                         <cr-question label="Q6000"> {{x.firstName}}
                             <cr-text type="password" ng-model="x.password"></cr-text>
                         </cr-question>
+
+                        <cr-question label="Q6000"> {{x.firstName}}
+                            <cr-multi-text ng-model="x.items"></cr-multi-text>
+                        </cr-question>
+
                     </tab>
 
 
