--- a/app/assets/_cr-multi-text.less
+++ b/app/assets/_cr-multi-text.less
@@ -18,5 +18,9 @@
         &.cr-multi-text-input-empty:not(:focus) {
             background: #eee;
         }
+
+        &.cr-multi-text-input-invalid {
+            background: lighten(#d22323, 35%);
+        }
     }
 }
