--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-lighting.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-lighting.html
@@ -48,7 +48,7 @@
     </cr-section>
 
     <cr-question label="Q1235.label">
-        <cr-slider ng-model="getAnswerValue('Q1235').doubleValue" ng-steps="getNumericOptions('Q1235',0,5,1)"></cr-slider>
+        <cr-slider ng-model="getAnswerValue('Q1235').stringValue" ng-steps="getNumericOptions('Q1235',0,5,1)"></cr-slider>
     </cr-question>
 
 
