--- a/app/assets/_cr-section.less
+++ b/app/assets/_cr-section.less
@@ -2,6 +2,7 @@
 .cr-section {
     margin-bottom: 0em;
     .cr-section-label {
+        margin-top: 2em;
         font-weight: normal;
         font-style: normal;
     }
