--- a/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
@@ -14,7 +14,7 @@
 
                 <a class="cr-profile-actions-link"
                    ng-bind-html="'nav.to-actions' | translate"
-                   href="#/household-actions">
+                   ui-sref="root.householdActions">
                 </a>
             </div>
 
