--- a/app/eu/factorx/citizens/angular/views/welcome.html
+++ b/app/eu/factorx/citizens/angular/views/welcome.html
@@ -58,7 +58,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-left">
-                <a href="#/controls-demo">Controls demo ></a>
+                <a ui-sref="root.controlsDemo">Controls demo ></a>
             </div>
         </div>
     </div>
