--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -24,6 +24,7 @@
         <script src='@routes.Assets.at("components/angular-bootstrap/ui-bootstrap-tpls.js")'></script>
         <script src='@routes.Assets.at("components/angular-rangeslider/angular.rangeSlider.js")'></script>
         <script src='@routes.Assets.at("components/angular-gettext/dist/angular-gettext.js")'></script>
+        <script src='@routes.Assets.at("components/ui-router/release/angular-ui-router.js")'></script>
         @* Messenger *@
         <script src='@routes.Assets.at("components/messenger/build/js/messenger.min.js")'></script>
         @* Trip *@
@@ -43,8 +44,7 @@
     </head>
     <body ng-controller="MainCtrl">
 
-        <div class="cr-master">
-            <ng-view></ng-view>
+        <div class="cr-master" ui-view>
         </div>
 
     </body>
