--- a/app/assets/style.less
+++ b/app/assets/style.less
@@ -34,3 +34,26 @@ img, button {
   padding: 5px;
   margin-top: 3px;
 }
+
+
+
+
+.tc-chart-js-legend {
+    list-style-type: none;
+    padding-left: 0px;
+}
+.tc-chart-js-legend li {
+    display: block;
+    float: left;
+    clear:both;
+    padding:10px;
+}
+.tc-chart-js-legend li span {
+    width:12px;
+    height:12px;
+    display:block;
+    float:left;
+    margin-top:4px;
+    margin-right:10px;
+    border-radius: 6px;
+}
