--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -13,6 +13,8 @@
         <script src='@routes.Assets.at("components/jquery-ui/jquery-ui.min.js")'></script>
         @* Bootstrap *@
         <script src='@routes.Assets.at("components/bootstrap/dist/js/bootstrap.js")'></script>
+        @* Chart.js *@
+        <script src='@routes.Assets.at("components/Chart.js/Chart.min.js")'></script>
         @* Angular dependencies local *@
         <script src='@routes.Assets.at("components/angular/angular.js")'></script>
         <script src='@routes.Assets.at("components/angular-i18n/angular-locale_fr-fr.js")'></script>
@@ -24,7 +26,8 @@
         <script src='@routes.Assets.at("components/angular-bootstrap/ui-bootstrap-tpls.js")'></script>
         <script src='@routes.Assets.at("components/angular-rangeslider/angular.rangeSlider.js")'></script>
         <script src='@routes.Assets.at("components/angular-gettext/dist/angular-gettext.js")'></script>
-        <script src='@routes.Assets.at("components/ui-router/release/angular-ui-router.js")'></script>
+        <script src='@routes.Assets.at("components/ui-router/release/angular-ui-router.min.js")'></script>
+        <script src='@routes.Assets.at("components/tc-angular-chartjs/dist/tc-angular-chartjs.min.js")'></script>
         @* Messenger *@
         <script src='@routes.Assets.at("components/messenger/build/js/messenger.min.js")'></script>
         @* Trip *@
