--- a/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/household-profile.html
@@ -93,14 +93,14 @@
             </div>
         </div>
 
-        <div class="row cr-profile-chart">
-            <div class="col-md-8">
-                <canvas tc-chartjs-line chart-options="options" chart-data="data" chart-legend="legend"></canvas>
-            </div>
-            <div class="col-md-4">
-                <div tc-chartjs-legend chart-legend="legend"></div>
-            </div>
-        </div>
+        <!--<div class="row cr-profile-chart">-->
+            <!--<div class="col-md-8">-->
+                <!--<canvas tc-chartjs-line chart-options="options" chart-data="data" chart-legend="legend"></canvas>-->
+            <!--</div>-->
+            <!--<div class="col-md-4">-->
+                <!--<div tc-chartjs-legend chart-legend="legend"></div>-->
+            <!--</div>-->
+        <!--</div>-->
 
     </div>
 
