--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -14,7 +14,7 @@
         @* Bootstrap *@
         <script src='@routes.Assets.at("components/bootstrap/dist/js/bootstrap.js")'></script>
         @* Chart.js *@
-        <script src='@routes.Assets.at("components/Chart.js/Chart.min.js")'></script>
+        @*<script src='@routes.Assets.at("components/Chart.js/Chart.min.js")'></script>*@
         @* Angular dependencies local *@
         <script src='@routes.Assets.at("components/angular/angular.js")'></script>
         <script src='@routes.Assets.at("components/angular-i18n/angular-locale_fr-fr.js")'></script>
@@ -27,7 +27,7 @@
         <script src='@routes.Assets.at("components/angular-rangeslider/angular.rangeSlider.js")'></script>
         <script src='@routes.Assets.at("components/angular-gettext/dist/angular-gettext.js")'></script>
         <script src='@routes.Assets.at("components/ui-router/release/angular-ui-router.min.js")'></script>
-        <script src='@routes.Assets.at("components/tc-angular-chartjs/dist/tc-angular-chartjs.min.js")'></script>
+        @*<script src='@routes.Assets.at("components/tc-angular-chartjs/dist/tc-angular-chartjs.min.js")'></script>*@
         @* Messenger *@
         <script src='@routes.Assets.at("components/messenger/build/js/messenger.min.js")'></script>
         @* Trip *@
