--- a/app/eu/factorx/citizens/views/index.scala.html
+++ b/app/eu/factorx/citizens/views/index.scala.html
@@ -13,8 +13,9 @@
         <script src='@routes.Assets.at("components/jquery-ui/jquery-ui.min.js")'></script>
         @* Bootstrap *@
         <script src='@routes.Assets.at("components/bootstrap/dist/js/bootstrap.js")'></script>
-        @* Chart.js *@
-        @*<script src='@routes.Assets.at("components/Chart.js/Chart.min.js")'></script>*@
+        @* D3 *@
+        <script src='@routes.Assets.at("components/d3/d3.min.js")'></script>
+        <script src='@routes.Assets.at("components/nvd3/nv.d3.min.js")'></script>
         @* Angular dependencies local *@
         <script src='@routes.Assets.at("components/angular/angular.js")'></script>
         <script src='@routes.Assets.at("components/angular-i18n/angular-locale_fr-fr.js")'></script>
@@ -27,7 +28,7 @@
         <script src='@routes.Assets.at("components/angular-rangeslider/angular.rangeSlider.js")'></script>
         <script src='@routes.Assets.at("components/angular-gettext/dist/angular-gettext.js")'></script>
         <script src='@routes.Assets.at("components/ui-router/release/angular-ui-router.min.js")'></script>
-        @*<script src='@routes.Assets.at("components/tc-angular-chartjs/dist/tc-angular-chartjs.min.js")'></script>*@
+        <script src='@routes.Assets.at("components/angular-nvd3/dist/angular-nvd3.min.js")'></script>
         @* Messenger *@
         <script src='@routes.Assets.at("components/messenger/build/js/messenger.min.js")'></script>
         @* Trip *@
@@ -42,6 +43,7 @@
         <link rel="stylesheet" media="screen" href='@routes.Assets.at("components/angular-rangeslider/angular.rangeSlider.css")'/>
         <link rel="stylesheet" media="screen" href='@routes.Assets.at("components/messenger/build/css/messenger.css")'/>
         <link rel="stylesheet" media="screen" href='@routes.Assets.at("components/trip.js/src/trip.min.css")'/>
+        <link rel="stylesheet" media="screen" href='@routes.Assets.at("components/nvd3/nv.d3.min.css")'/>
         <link rel="stylesheet" media="screen" href='@routes.Assets.at("style.css")'/>
 
     </head>
