--- a/app/eu/factorx/citizens/angular/views/household/account/household-account.html
+++ b/app/eu/factorx/citizens/angular/views/household/account/household-account.html
@@ -14,7 +14,7 @@
                 <a
                         class="cr-actions-profile-link"
                         ng-bind-html="'nav.back-to-action' | translate"
-                        href="#/household-actions">
+                        ui-sref="root.householdActions">
                 </a>
 
             </div>
