--- a/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/household-actions.html
@@ -15,12 +15,12 @@
                 <a
                         class="cr-actions-profile-link"
                         ng-bind-html="'nav.back-to-profile' | translate"
-                        href="#/household-profile">
+                        ui-sref="root.householdProfile">
                 </a>
 
                 <a class="cr-actions-register-link"
                    ng-bind-html="'nav.to-identification' | translate"
-                   href="#/household-account">
+                   ui-sref="root.householdAccount">
                 </a>
             </div>
 
