--- a/app/eu/factorx/citizens/angular/views/household/actions/topics/actions-lighting.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/topics/actions-lighting.html
@@ -6,48 +6,48 @@
 <div class="modal-body">
 
     <cr-question label="Q3410.label"  cr-conditioned="Q3410">
-        <cr-boolean ng-model="getAnswerValue('Q3410').booleanValue"></cr-boolean>
+        <cr-boolean cr-tootip-on-respond="{key:Q3410,period:null}" ng-model="getAnswerValue('Q3410').booleanValue"></cr-boolean>
     </cr-question>
 
     <cr-question label="Q3420.label" cr-conditioned="Q3420">
-        <cr-boolean ng-model="getAnswerValue('Q3420').booleanValue"></cr-boolean>
+        <cr-boolean cr-tootip-on-respond="{key:Q3420,period:null}" ng-model="getAnswerValue('Q3420').booleanValue"></cr-boolean>
     </cr-question>
 
     <cr-question label="Q3510.label" cr-conditioned="Q3510">
-        <cr-boolean ng-model="getAnswerValue('Q3510').booleanValue"></cr-boolean>
+        <cr-boolean cr-tootip-on-respond="{key:Q3510,period:null}" ng-model="getAnswerValue('Q3510').booleanValue"></cr-boolean>
     </cr-question>
 
     <cr-question label="Q3530.label" cr-conditioned="Q3530">
-        <cr-boolean ng-model="getAnswerValue('Q3530').booleanValue"></cr-boolean>
+        <cr-boolean cr-tootip-on-respond="{key:Q3530,period:null}" ng-model="getAnswerValue('Q3530').booleanValue"></cr-boolean>
     </cr-question>
 
     <cr-question label="Q3610.label" cr-conditioned="Q3610">
-        <cr-boolean ng-model="getAnswerValue('Q3610').booleanValue"></cr-boolean>
+        <cr-boolean cr-tootip-on-respond="{key:Q3610,period:null}" ng-model="getAnswerValue('Q3610').booleanValue"></cr-boolean>
     </cr-question>
 
 
     <cr-question label="Q3620.label" cr-conditioned="Q3620">
-        <cr-boolean ng-model="getAnswerValue('Q3620').booleanValue"></cr-boolean>
+        <cr-boolean cr-tootip-on-respond="{key:Q3620,period:null}" ng-model="getAnswerValue('Q3620').booleanValue"></cr-boolean>
     </cr-question>
 
 
     <cr-question label="Q3630.label" cr-conditioned="Q3630">
-        <cr-boolean ng-model="getAnswerValue('Q3630').booleanValue"></cr-boolean>
+        <cr-boolean cr-tootip-on-respond="{key:Q3630,period:null}" ng-model="getAnswerValue('Q3630').booleanValue"></cr-boolean>
     </cr-question>
 
 
     <cr-question label="Q3631.label" cr-conditioned="Q3631">
-        <cr-slider ng-model="getAnswerValue('Q3631').stringValue" ng-steps="getNumericOptions('Q3631',1,4,1)"></cr-slider>
+        <cr-slider cr-tootip-on-respond="{key:Q3631,period:null}" ng-model="getAnswerValue('Q3631').stringValue" ng-steps="getNumericOptions('Q3631',1,4,1)"></cr-slider>
     </cr-question>
 
 
     <cr-question label="Q3640.label" cr-conditioned="Q3640">
-        <cr-boolean ng-model="getAnswerValue('Q3640').booleanValue"></cr-boolean>
+        <cr-boolean cr-tootip-on-respond="{key:Q3640,period:null}" ng-model="getAnswerValue('Q3640').booleanValue"></cr-boolean>
     </cr-question>
 
 
     <cr-question label="Q3810.label" cr-conditioned="Q3810">
-        <cr-boolean ng-model="getAnswerValue('Q3810').booleanValue"></cr-boolean>
+        <cr-boolean cr-tootip-on-respond="{key:Q3810,period:null}" ng-model="getAnswerValue('Q3810').booleanValue"></cr-boolean>
     </cr-question>
 
 
