--- a/app/eu/factorx/citizens/angular/views/household/actions/topics/actions-programs.html
+++ b/app/eu/factorx/citizens/angular/views/household/actions/topics/actions-programs.html
@@ -6,15 +6,15 @@
 <div class="modal-body">
 
     <cr-question label="Q3110.label" cr-conditioned="Q3110">
-        <cr-boolean ng-model="getAnswerValue('Q3110').booleanValue"></cr-boolean>
+        <cr-boolean cr-tootip-on-respond="{key:Q3110,period:null}" ng-model="getAnswerValue('Q3110').booleanValue"></cr-boolean>
     </cr-question>
 
     <cr-question label="Q3120.label" cr-conditioned="Q3120">
-        <cr-boolean ng-model="getAnswerValue('Q3120').booleanValue"></cr-boolean>
+        <cr-boolean cr-tootip-on-respond="{key:Q3120,period:null}" ng-model="getAnswerValue('Q3120').booleanValue"></cr-boolean>
     </cr-question>
 
     <cr-question label="Q3130.label" cr-conditioned="Q3130">
-        <cr-boolean ng-model="getAnswerValue('Q3130').booleanValue"></cr-boolean>
+        <cr-boolean cr-tootip-on-respond="{key:Q3130,period:null}" ng-model="getAnswerValue('Q3130').booleanValue"></cr-boolean>
     </cr-question>
     
 </div>
