--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-dinner.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-dinner.html
@@ -7,25 +7,25 @@
 
     <cr-section label="Q1140.label">
         <cr-question label="period.1.label">
-            <cr-slider ng-model="getAnswerValue('Q1140','FIRST').stringValue" ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1140',period:'FIRST'}" ng-model="getAnswerValue('Q1140','FIRST').stringValue" ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
         </cr-question>
         <cr-question label="period.2.label">
-            <cr-slider ng-model="getAnswerValue('Q1140','SECOND').stringValue"  ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1140',period:'SECOND'}" ng-model="getAnswerValue('Q1140','SECOND').stringValue"  ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
         </cr-question>
         <cr-question label="period.3.label">
-            <cr-slider ng-model="getAnswerValue('Q1140','THIRD').stringValue" ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1140',period:'THIRD'}" ng-model="getAnswerValue('Q1140','THIRD').stringValue" ng-steps="getNumericOptions('Q1140',0,5,1)"></cr-slider>
         </cr-question>
     </cr-section>
 
     <cr-section label="Q1150.label">
         <cr-question label="period.1.label">
-            <cr-slider ng-model="getAnswerValue('Q1150','FIRST').stringValue" ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1150',period:'FIRST'}" ng-model="getAnswerValue('Q1150','FIRST').stringValue" ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
         </cr-question>
         <cr-question label="period.2.label">
-            <cr-slider ng-model="getAnswerValue('Q1150','SECOND').stringValue"  ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1150',period:'SECOND'}" ng-model="getAnswerValue('Q1150','SECOND').stringValue"  ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
         </cr-question>
         <cr-question label="period.3.label">
-            <cr-slider ng-model="getAnswerValue('Q1150','THIRD').stringValue" ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1150',period:'THIRD'}" ng-model="getAnswerValue('Q1150','THIRD').stringValue" ng-steps="getNumericOptions('Q1150',0,5,1)"></cr-slider>
         </cr-question>
     </cr-section>
 </div>
