--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-presence.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-presence.html
@@ -6,15 +6,15 @@
 <div class="modal-body">
 
     <cr-question label="Q1300.label">
-        <cr-slider ng-model="getAnswerValue('Q1300').doubleValue" min="0" max="20" step="1"></cr-slider>
+        <cr-slider cr-tootip-on-respond="{key:'Q1300',period:null}" ng-model="getAnswerValue('Q1300').doubleValue" min="0" max="20" step="1"></cr-slider>
     </cr-question>
 
     <cr-question label="Q1400.label">
-        <cr-slider cr-tootip-on-respond="Q1400" ng-model="getAnswerValue('Q1400').stringValue" ng-steps="getNumericOptions('Q1400',0,5,1)"></cr-slider>
+        <cr-slider cr-tootip-on-respond="{key:'Q1400',period:null}" ng-model="getAnswerValue('Q1400').stringValue" ng-steps="getNumericOptions('Q1400',0,5,1)"></cr-slider>
     </cr-question>
 
     <cr-question label="Q1500.label">
-        <cr-slider ng-model="getAnswerValue('Q1500').stringValue" ng-steps="getOptions('Q1500')" vertical="true"></cr-slider>
+        <cr-slider cr-tootip-on-respond="{key:'Q1500',period:null}" ng-model="getAnswerValue('Q1500').stringValue" ng-steps="getOptions('Q1500')" vertical="true"></cr-slider>
     </cr-question>
 
 </div>
