--- a/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-programs.html
+++ b/app/eu/factorx/citizens/angular/views/household/profile/topics/profile-programs.html
@@ -7,35 +7,35 @@
 
     <cr-section label="Q1110.label">
         <cr-question label="period.1.label">
-            <cr-slider ng-model="getAnswerValue('Q1110','FIRST').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1110',period:'FIRST'}" ng-model="getAnswerValue('Q1110','FIRST').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
         </cr-question>
         <cr-question label="period.2.label">
-            <cr-slider ng-model="getAnswerValue('Q1110','SECOND').stringValue"  ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1110',period:'SECOND'}" ng-model="getAnswerValue('Q1110','SECOND').stringValue"  ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
         </cr-question>
         <cr-question label="period.3.label">
-            <cr-slider ng-model="getAnswerValue('Q1110','THIRD').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1110',period:'THIRD'}" ng-model="getAnswerValue('Q1110','THIRD').stringValue" ng-steps="getNumericOptions('Q1110',0,5,1)"></cr-slider>
         </cr-question>
     </cr-section>
     <cr-section label="Q1120.label">
         <cr-question label="period.1.label">
-            <cr-slider ng-model="getAnswerValue('Q1120','FIRST').stringValue" ng-steps="getNumericOptions('Q1120',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1120',period:'FIRST'}" ng-model="getAnswerValue('Q1120','FIRST').stringValue" ng-steps="getNumericOptions('Q1120',0,5,1)"></cr-slider>
         </cr-question>
         <cr-question label="period.2.label">
-            <cr-slider ng-model="getAnswerValue('Q1120','SECOND').stringValue"  ng-steps="getNumericOptions('Q1120',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1120',period:'SECOND'}" ng-model="getAnswerValue('Q1120','SECOND').stringValue"  ng-steps="getNumericOptions('Q1120',0,5,1)"></cr-slider>
         </cr-question>
         <cr-question label="period.3.label">
-            <cr-slider ng-model="getAnswerValue('Q1120','THIRD').stringValue" ng-steps="getNumericOptions('Q1120',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1120',period:'THIRD'}" ng-model="getAnswerValue('Q1120','THIRD').stringValue" ng-steps="getNumericOptions('Q1120',0,5,1)"></cr-slider>
         </cr-question>
     </cr-section>
     <cr-section label="Q1130.label">
         <cr-question label="period.1.label">
-            <cr-slider ng-model="getAnswerValue('Q1130','FIRST').stringValue" ng-steps="getNumericOptions('Q1130',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1130',period:'FIRST'}" ng-model="getAnswerValue('Q1130','FIRST').stringValue" ng-steps="getNumericOptions('Q1130',0,5,1)"></cr-slider>
         </cr-question>
         <cr-question label="period.2.label">
-            <cr-slider ng-model="getAnswerValue('Q1130','SECOND').stringValue"  ng-steps="getNumericOptions('Q1130',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1130',period:'SECOND'}" ng-model="getAnswerValue('Q1130','SECOND').stringValue"  ng-steps="getNumericOptions('Q1130',0,5,1)"></cr-slider>
         </cr-question>
         <cr-question label="period.3.label">
-            <cr-slider ng-model="getAnswerValue('Q1130','THIRD').stringValue" ng-steps="getNumericOptions('Q1130',0,5,1)"></cr-slider>
+            <cr-slider cr-tootip-on-respond="{key:'Q1130',period:'THIRD'}" ng-model="getAnswerValue('Q1130','THIRD').stringValue" ng-steps="getNumericOptions('Q1130',0,5,1)"></cr-slider>
         </cr-question>
     </cr-section>
 </div>
